[package]
edition = "2015"
rust-version = "1.57.0"
authors = ["Wraithan (Chris McDonald) <xwraithanx@gmail.com>"]
description = "Increments the version number of the current project."
keywords = ["cargo", "version", "bump"]
license = "ISC"
name = "cargo-bump"
readme = "README.md"
repository = "https://github.com/wraithan/cargo-bump"
version = "1.1.0"

[badges]
travis-ci = {repository = "wraithan/cargo-bump", branch = "master" }

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
semver = "1.0.18"
toml_edit = "0.14.4"
cargo_metadata = "0.17.0"

once_cell = "=1.17.2"
